feat(terminal): trigger TermOSC autocommand events
This commit implements a new TermOSC autocommand event and has Neovim
emit this event when children of terminal buffers emit an OSC sequence
libvterm does not handle.

The TermOSC autocommand event has additional data in its v:event :
`command`, which corresponds to the OSC number (e.g. `7` in `OSC7`) and
`payload`, which is the actual content of the command.

This commit is meant as a first step in the direction of closing #2252.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -284,6 +284,9 @@ The following new APIs and features were added.
 
 • |vim.deepcopy()| has a `noref` argument to avoid hashing table values.
 
+• Terminal buffers now emit a TermOSC autocommand event when their children
+  emit OSC sequences. See `:h TermOSC` for more information.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
