feat(lsp/buf): optionally suppress no LSP notification
This makes it possible to suppress the warning indicating that no LSP
matching LSP servers were found. This can happen if you have a filter
that would exclude one of the servers. For example you are excluding
tsserver with the intention that you would use eslint instead. But if
eslint is not installed or configured for that project then you would
be able to silence the warning.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -120,6 +120,8 @@ The following new APIs and features were added.
     indicator to see if a server supports a feature. Instead use
     `client.supports_method(<method>)`. It considers both the dynamic
     capabilities and static `server_capabilities`.
+  • Added `silent` option to `vim.lsp.buf.format` to suppress the no matching
+    language servers notification when `true`.
 
 • Treesitter
   • Bundled parsers and queries (highlight, folds) for Markdown, Python, and
