refactor(treesitter)!: add `language.load()` and soft-deprecate `language.add()`
`language.add()` also calls `language.register()` which violates the
single responsibility principle and functional purity, and abets issues
like #24531.

Although some of these issues are user error, what if someone does want
`get_lang(ft) != ft` even when a parser named `ft` is available,
or for any other legitimate reason wishes to load without registering?

In fact, several current usages are not even to load the parser, but to check
whether it exists, so the registration side-effect is especially unnecessary.

This patch also "breaks" callers of `language.add()` to do `language.load()`
without `language.register()`, but for those cases: https://xkcd.com/1172/

Closes: #24531

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -138,6 +138,7 @@ The following new APIs and features were added.
   • Added `vim.treesitter.preview_query()`, for live editing of treesitter
     queries.
   • Improved error messages for query parsing.
+  • |vim.treesitter.language.load()| replaces |vim.treesitter.language.add()|.
 
 • |vim.ui.open()| opens URIs using the system default handler (macOS `open`,
   Windows `explorer`, Linux `xdg-open`, etc.)
@@ -265,6 +266,9 @@ release.
   - |vim.lsp.util.get_progress_messages()|	Use |vim.lsp.status()| instead.
   - |vim.lsp.get_active_clients()|		Use |vim.lsp.get_clients()| instead.
   - |vim.lsp.for_each_buffer_client()|		Use |vim.lsp.get_clients()| instead.
+
+• vim.treesitter functions:
+  • |vim.treesitter.language.add()|		Use |vim.treesitter.language.load()| instead.
 
 • `vim.loop` has been renamed to `vim.uv`.
 
