--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -269,6 +269,6 @@ release.
 • `vim.loop` has been renamed to `vim.uv`.
 
 • vim.treesitter.languagetree functions:
-  - |LanguageTree:for_each_child()|	Use |LanguageTree:children()| (non-recursive) instead.
+  - |LanguageTree:for_each_child()|	Use |LanguageTree:children()| and |vim.traverse()| instead.
 
  vim:tw=78:ts=8:sw=2:et:ft=help:norl:
