feat(folds): support virtual text format for 'foldtext'
Co-authored-by: Lewis Russell <lewis6991@gmail.com>

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -89,6 +89,8 @@ The following new APIs and features were added.
 
 • Added inline virtual text support to |nvim_buf_set_extmark()|.
 
+• 'foldtext' now supports virtual text format. |fold-foldtext|
+
 • The terminal buffer now supports reflow (wrapped lines adapt when the buffer
   is resized horizontally). Note: Lines that are not visible and kept in
   |'scrollback'| are not reflown.
