feat: relative path in NVIM_APPNAME
Problem:
NVIM_APPNAME does not allow path separators in the name, so relative
paths can't be used:

    NVIM_APPNAME="neovim-configs/first-config" nvim
    NVIM_APPNAME="neovim-configs/second-config" nvim

Solution:
Let NVIM_APPNAME be a relative path. Absolute paths are not supported.

fix #23056
fix #24966

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -169,6 +169,8 @@ The following new APIs and features were added.
 • |vim.lsp.util.locations_to_items()| sets the `user_data` of each item to the
   original LSP `Location` or `LocationLink`.
 
+• |$NVIM_APPNAME| can be set to a relative path instead of only a name.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
