--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -270,6 +270,7 @@ release.
   - |vim.lsp.util.get_progress_messages()|	Use |vim.lsp.status()| instead.
   - |vim.lsp.get_active_clients()|		Use |vim.lsp.get_clients()| instead.
   - |vim.lsp.for_each_buffer_client()|		Use |vim.lsp.get_clients()| instead.
+  - |vim.lsp.util.trim_empty_lines()|		Use |vim.split()| with `trimempty` instead.
 
 • `vim.loop` has been renamed to `vim.uv`.
 
