refactor(options)!: graduate shortmess+=f flag
Not everything needs to be crazy overconfigurable.

Also fixes a warning in latest clang which didn't approve of
the funky math switch statement in  append_arg_number

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -247,6 +247,9 @@ The following deprecated functions or APIs were removed.
 
 • Support for legacy treesitter injection queries is removed.
 
+• 'shortmess' flags:
+  - |shm-f| is removed. Always uses "(3 of 5)", never "(file 3 of 5)"
+
 ==============================================================================
 DEPRECATIONS                                                *news-deprecations*
 
