refactor(options)!: graduate some more shortmess flags
A lot of updated places in the docs were already incorrect since long
since they did not reflect the default behaviour.

"[dos format]" could've been argued being better for discoverability
but that ship has already sailed as it is no longer displayed by default.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -247,8 +247,11 @@ The following deprecated functions or APIs were removed.
 
 • Support for legacy treesitter injection queries is removed.
 
-• 'shortmess' flags:
-  - |shm-f| is removed. Always uses "(3 of 5)", never "(file 3 of 5)"
+• Removed 'shortmess' flags:
+  - |shm-f|. Always uses "(3 of 5)", never "(file 3 of 5)"
+  - |shm-i|. Always use "[noeol]".
+  - |shm-x|. Always use "[dos]", "[unix]" and "[mac]"
+  - |shm-n|. Always use "[New]".
 
 ==============================================================================
 DEPRECATIONS                                                *news-deprecations*
