--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -65,6 +65,9 @@ The following changes may require adaptations in user config or plugins.
   now requires an explicit range argument to be passed. If injections are
   required, provide an explicit range via `parser:parse({ start_row, end_row })`.
 
+• Float window support hide and show by setting `hide` on `nvim_open_win` and
+  `nvim_win_set_config`.
+
 ==============================================================================
 NEW FEATURES                                                    *news-features*
 
