--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -281,6 +281,8 @@ release.
   - |vim.lsp.get_active_clients()|		Use |vim.lsp.get_clients()| instead.
   - |vim.lsp.for_each_buffer_client()|		Use |vim.lsp.get_clients()| instead.
   - |vim.lsp.util.trim_empty_lines()|		Use |vim.split()| with `trimempty` instead.
+  - |vim.lsp.util.try_trim_markdown_code_blocks()|
+  - |vim.lsp.util.set_lines()|
 
 • `vim.loop` has been renamed to `vim.uv`.
 
