feat: ignore swapfile for running Nvim processes
(This is an alternative to the parent commit which makes the swapfile
dialog opt-in via ":confirm edit".)

Problem:
The swapfile "E325: ATTENTION" dialog is displayed when editing a file
already open in another (running) Nvim. Usually this behavior is
annoying and irrelevant:
- "Recover" and the other options ("Open readonly", "Quit", "Abort") are
  almost never wanted.
- swapfiles are less relevant for "multi-Nvim" since 'autoread' is
  enabled by default.
  - Even less relevant if user enables 'autowrite'.

Solution:
Define a default SwapExists handler which does the following:
1. If the swapfile is owned by a running Nvim process, automatically
   chooses "(E)dit anyway" (caveat: this creates a new, extra swapfile,
   which is mostly harmless and ignored except by `:recover` or `nvim -r`.
2. Shows a 1-line "ignoring swapfile..." message.
3. Users can disable the default SwapExists handler via `autocmd! nvim_swapfile`.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -117,7 +117,8 @@ The following new APIs and features were added.
 • Editor
   • By default, the swapfile "ATTENTION" |E325| dialog is skipped if the
     swapfile is owned by a running Nvim process, instead of prompting. If you
-    always want the swapfile dialog, set 'confirm' or use ":confirm edit".
+    always want the swapfile dialog, delete the default SwapExists handler:
+    `autocmd! nvim_swapfile`. |default-autocmds|
 
 • LSP
   • LSP method names are available in |vim.lsp.protocol.Methods|.
