feat(lsp)!: replace snippet parser by lpeg grammar

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -68,6 +68,10 @@ The following changes may require adaptations in user config or plugins.
 • Float window support hide and show by setting `hide` on `nvim_open_win` and
   `nvim_win_set_config`.
 
+• |vim.lsp.util.parse_snippet()| will now strictly follow the snippet grammar
+  defined by LSP, and hence previously parsed snippets might now be considered
+  invalid input.
+
 ==============================================================================
 NEW FEATURES                                                    *news-features*
 
