--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -406,6 +406,9 @@ The following changes to existing APIs or features add new behavior.
 • |:checkhealth| buffer can now be opened in a split window using modifiers like
   |:vertical|, |:horizontal| and |:botright|.
 
+• |nvim_open_win()| and |nvim_win_set_config()| now support opening normal (split)
+  windows, and moving floating windows into split windows.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
