--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -188,6 +188,8 @@ The following new APIs and features were added.
 
 • |$NVIM_APPNAME| can be set to a relative path instead of only a name.
 
+• Added |:fclose| command.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
