--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -195,6 +195,8 @@ The following new APIs and features were added.
 
 • Added |vim.snippet| for snippet expansion support.
 
+• 'complete' option supports "f" flag for completing buffer names.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
