--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -73,7 +73,12 @@ The following changes may require adaptations in user config or plugins.
 
 • |OptionSet| autocommand args |v:option_new|, |v:option_old|,
   |v:option_oldlocal|, |v:option_oldglobal| now have the type of the option
-  instead of always being strings.
+  instead of always being strings. |v:option_old| is now the old global value
+  for all global-local options, instead of just string global-local options.
+
+• Local value for a global-local number/boolean option is now unset when
+  the option is set (e.g. using |:set| or |nvim_set_option_value()|) without a
+  scope, which means they now behave the same way as string options.
 
 ==============================================================================
 NEW FEATURES                                                    *news-features*
