--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -309,6 +309,9 @@ release.
   - |vim.lsp.util.trim_empty_lines()|		Use |vim.split()| with `trimempty` instead.
   - |vim.lsp.util.try_trim_markdown_code_blocks()|
   - |vim.lsp.util.set_lines()|
+  - |vim.lsp.util.extract_completion_items()|
+  - |vim.lsp.util.parse_snippet()|
+  - |vim.lsp.util.text_document_completion_list_to_complete_items()|
 
 • `vim.loop` has been renamed to `vim.uv`.
 
