feat(stdlib): add vim.base64 module (#25843)
Add base64 encode() and decode() functions to a vim.base64 module.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -202,6 +202,9 @@ The following new APIs and features were added.
 
 • 'complete' option supports "f" flag for completing buffer names.
 
+• Added |vim.base64.encode()| and |vim.base64.decode()| for encoding and decoding
+  strings using Base64 encoding.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
