feat(tui): use TermResponse event for OSC responses
When the terminal emulator sends an OSC sequence to Nvim (as a response
to another OSC sequence that was first sent by Nvim), populate the OSC
sequence in the v:termresponse variable and fire the TermResponse event.
The escape sequence is also included in the "data" field of the
autocommand callback when the autocommand is defined in Lua.

This makes use of the already documented but unimplemented TermResponse
event. This event exists in Vim but is only fired when Vim receives a
primary device attributes response.

Fixes: https://github.com/neovim/neovim/issues/25856

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -205,6 +205,9 @@ The following new APIs and features were added.
 • Added |vim.base64.encode()| and |vim.base64.decode()| for encoding and decoding
   strings using Base64 encoding.
 
+• The |TermResponse| autocommand event can be used with |v:termresponse| to
+  read escape sequence responses from the terminal.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
