--- a/src/man/nvim.1
+++ b/src/man/nvim.1
@@ -339,6 +339,10 @@ Print version information and exit.
 .El
 .Sh ENVIRONMENT
 .Bl -tag -width Fl
+.It Ev NVIM_APPNAME
+Configures the name of sub-directories used within each XDG user directory.
+Defaults to nvim.
+:help $NVIM_APPNAME
 .It Ev NVIM_LOG_FILE
 Low-level log file, usually found at ~/.local/state/nvim/log.
 :help $NVIM_LOG_FILE
