--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -211,6 +211,9 @@ The following new APIs and features were added.
 • A clipboard provider which uses OSC 52 to copy the selection to the system
   clipboard is now bundled by default. |clipboard-osc52|
 
+• Added a "flush" option to |nvim_echo()| to cause messages to be displayed
+  immediately without waiting for a redraw.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
