--- a/src/man/nvim.1
+++ b/src/man/nvim.1
@@ -340,8 +340,9 @@ Print version information and exit.
 .Sh ENVIRONMENT
 .Bl -tag -width Fl
 .It Ev NVIM_APPNAME
-Configures the name of sub-directories used within each XDG user directory.
-Defaults to nvim.
+The name of sub-directories used within each XDG user directory.
+Defaults to
+.Cm nvim .
 :help $NVIM_APPNAME
 .It Ev NVIM_LOG_FILE
 Low-level log file, usually found at ~/.local/state/nvim/log.
