--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -15,6 +15,13 @@ BREAKING CHANGES                                                *news-breaking*
 
 The following changes may require adaptations in user config or plugins.
 
+• In some cases, the cursor in the Nvim |TUI| would blink even without
+  configuring 'guicursor' as mentioned in |cursor-blinking|. This was a bug
+  that has now been fixed. If your cursor has stopped blinking, add the
+  following (or similar, adapted to user preference) to your |config| file: >vim
+
+    set guicursor+=n-v-c:blinkon500-blinkoff500
+<
 • |vim.tbl_islist()| now checks whether a table is actually list-like (i.e.,
   has integer keys without gaps and starting from 1). For the previous
   behavior (only check for integer keys, allow gaps or not starting with 1),
