feat(terminal): respond to OSC bg and fg request
The motivation for this update is Issue #15365, where background=light
is not properly set for Nvim running from an Nvim :terminal. This can be
encountered when e.g., opening a terminal to make git commits, which
opens EDITOR=nvim in the nested terminal.

Under the implementation of this commit, the OSC response always
indicates a black or white foreground/background. While this may not
reflect the actual foreground/background color, it permits 'background'
to be retained for a nested Nvim instance running in the terminal
emulator. The behaviour matches Vim.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -287,6 +287,8 @@ The following new APIs and features were added.
 • Terminal buffers emit a |TermRequest| autocommand event when the child
   process emits an OSC or DCS control sequence.
 
+• Terminal buffers respond to OSC background and foreground requests. |default-autocmds|
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
