fix(lua): disallow vim.wait() in fast contexts
`vim.wait()` cannot be called in a fast callback since the main loop
cannot be run in that context as it is not reentrant

Fixes #26122

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -325,6 +325,8 @@ The following changes to existing APIs or features add new behavior.
   NOTE: the regexp engine still has a hard-coded limit of considering
   6 composing chars only.
 
+• |vim.wait()| is no longer allowed to be called in |api-fast|.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
