--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -137,8 +137,7 @@ The following new APIs and features were added.
 • Builtin TUI can now recognize "super" (|<D-|) and "meta" (|<T-|) modifiers in a
   terminal emulator that supports |tui-csiu|.
 
-• |mode()| now returns cr and cvr for overstike/replace mode in the command
-  line. 
+• |mode()| now returns cr and cvr for overstike/replace mode in the command line. 
 
 • Editor
   • By default, the swapfile "ATTENTION" |E325| dialog is skipped if the
