refactor(diagnostic): set sign by using extmark
after sign implementation refactor by using extmark, we can use
`nvim_buf_set_extmark` to set diagnostic sign instead use `sign_define`

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -341,6 +341,9 @@ The following changes to existing APIs or features add new behavior.
 
 • Vimscript function |exists()| supports checking |v:lua| functions.
 
+• Diagnostic sign text is no longer configured with |sign_define()|.
+  Use |vim.diagnostic.config()| instead.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
