--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -268,6 +268,8 @@ The following new APIs and features were added.
 • 'completeopt' option supports "popup" flags to show extra information in
   in floating window.
 
+• Added `x1` and `x2` mouse buttons as possible arguments to |nvim_input_mouse()|
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
