fix(terminal): convert newline
Problem:
Unlike termopen(), nvim_open_term() PTYs do not carriage-return the
cursor on newline ("\n") input.

    nvim -u NORC
    :let chan_id = nvim_open_term(1, {})
    :call chansend(chan_id, ["here", "are", "some", "lines"])

Actual behavior:

    here
        are
           some
               lines

Expected behaviour:

    here
    are
    some
    lines

Solution:
Add `force_crlf` option, and enable it by default.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -344,6 +344,8 @@ The following changes to existing APIs or features add new behavior.
 • Diagnostic sign text is no longer configured with |sign_define()|.
   Use |vim.diagnostic.config()| instead.
 
+• Added "force_crlf" option field in |nvim_open_term()|.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
