feat(defaults): enable 'termguicolors' by default when supported by terminal
Enable 'termguicolors' automatically when Nvim can detect that truecolor
is supported by the host terminal.

If $COLORTERM is set to "truecolor" or "24bit", or the terminal's
terminfo entry contains capabilities for Tc, RGB, or setrgbf and
setrgbb, then we assume that the terminal supports truecolor. Otherwise,
the terminal is queried (using both XTGETTCAP and SGR + DECRQSS). If the
terminal's response to these queries (if any) indicates that it supports
truecolor, then 'termguicolors' is enabled.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -98,6 +98,9 @@ The following changes may require adaptations in user config or plugins.
 • Default color scheme has been updated to be "Neovim branded" and accessible.
   Use `:colorscheme vim` to revert to the old legacy color scheme.
 
+• 'termguicolors' is enabled by default when Nvim is able to determine that
+  the host terminal emulator supports 24-bit color.
+
 ==============================================================================
 BREAKING CHANGES IN HEAD                                    *news-breaking-dev*
 
