refactor(options): remove option type macros
Problem: We have `P_(BOOL|NUM|STRING)` macros to represent an option's type, which is redundant because `OptValType` can already do that. The current implementation of option type flags is also too limited to allow adding multitype options in the future.

Solution: Remove `P_(BOOL|NUM|STRING)` and replace it with a new `type_flags` attribute in `vimoption_T`. Also do some groundwork for adding multitype options in the future.

Side-effects: Attempting to set an invalid keycode option (e.g. `set t_foo=123`) no longer gives an error.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -346,6 +346,9 @@ The following changes to existing APIs or features add new behavior.
 
 • Added "force_crlf" option field in |nvim_open_term()|.
 
+• Attempting to set an invalid keycode option (e.g. `set t_foo=123`) no longer
+  gives an error.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
