feat(eval): exists() function supports checking v:lua functions (#26485)
Problem:  Vimscript function exists() can't check v:lua functions.
Solution: Add support for v:lua functions to exists().

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -339,6 +339,8 @@ The following changes to existing APIs or features add new behavior.
 
 • |vim.wait()| is no longer allowed to be called in |api-fast|.
 
+• Vimscript function |exists()| supports checking |v:lua| functions.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
