--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -268,6 +268,8 @@ The following new APIs and features were added.
 • 'completeopt' option supports "popup" flags to show extra information in
   in floating window.
 
+• Added a new api |nvim_terminal_get_info()| to get terminal buffer information.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
