docs: small fixes
Co-authored-by: Gregory Anders <greg@gpanders.com>
Co-authored-by: WillLillis <wlillis@umass.edu>

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -112,9 +112,6 @@ The following changes may require adaptations in user config or plugins.
 • 'termguicolors' is enabled by default when Nvim is able to determine that
   the host terminal emulator supports 24-bit color.
 
-• `Q` now repeats a macro for each line of a visual selection.
-• `@` now repeats the indicated macro for each line of a visual selection.
-
 ==============================================================================
 BREAKING CHANGES IN HEAD                                    *news-breaking-dev*
 
@@ -274,6 +271,9 @@ The following new APIs and features were added.
   floating window.
 
 • |nvim_input_mouse()| supports mouse buttons "x1" and "x2".
+
+• |v_Q-default| and |v_@-default| repeat a register for each line of a visual
+  selection.
 
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
