feat: generate types and docs for v variables

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -223,6 +223,7 @@ The following new APIs and features were added.
   • `vim.*`
   • `vim.fn.*`
   • `vim.api.*`
+  • `vim.v.*`
 
 • Improved messages for type errors in `vim.api.*` calls (including `opts` params)
 
