--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -106,7 +106,8 @@ The following changes may require adaptations in user config or plugins.
   This also might result into some color schemes looking differently due to
   them relying on an implicit assumptions about how highlight groups are
   defined by default. To account for this, define all attributes of highlight
-  groups explicitly or use `:colorscheme vim` to restore previous definitions.
+  groups explicitly. Alternatively, use `:colorscheme vim` or
+  `:source $VIMRUNTIME/colors/vim.lua` to restore previous definitions.
 
 • 'termguicolors' is enabled by default when Nvim is able to determine that
   the host terminal emulator supports 24-bit color.
