vim-patch:9.1.0147: Cannot keep a buffer focused in a window
Problem:  Cannot keep a buffer focused in a window
          (Amit Levy)
Solution: Add the 'winfixbuf' window-local option
          (Colin Kennedy)

fixes:  vim/vim#6445
closes: vim/vim#13903

https://github.com/vim/vim/commit/215703563757a4464907ead6fb9edaeb7f430bea

N/A patch:
vim-patch:58f1e5c0893a

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -160,6 +160,8 @@ The following new APIs and features were added.
   • 'breakindent' performance is significantly improved for wrapped lines.
   • Cursor movement, insertion with [count] and |screenpos()| are now faster.
 
+• |'winfixbuf'| keeps a window focused onto a specific buffer
+
 • |vim.iter()| provides a generic iterator interface for tables and Lua
   iterators |for-in|.
 
