--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -284,8 +284,8 @@ The following new APIs and features were added.
 
 • |vim.deepcopy()| has a `noref` argument to avoid hashing table values.
 
-• Terminal buffers now emit a TermOSC autocommand event when their children
-  emit OSC sequences. See `:h TermOSC` for more information.
+• Terminal buffers emit a |TermRequest| autocommand event when the child
+  process emits an OSC or DCS control sequence.
 
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
