feat(terminal): trigger TermRequest autocommand events (#22159)
This commit implements a new TermRequest autocommand event and has Neovim
emit this event when children of terminal buffers emit an OSC or DCS sequence
libvterm does not handle.

The TermRequest autocommand event has additional data in the
v:termrequest variable.

Co-authored-by: Gregory Anders <greg@gpanders.com>

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -284,6 +284,9 @@ The following new APIs and features were added.
 
 • |vim.deepcopy()| has a `noref` argument to avoid hashing table values.
 
+• Terminal buffers emit a |TermRequest| autocommand event when the child
+  process emits an OSC or DCS control sequence.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
