feat(vim.version): add `vim.version.le` and `vim.version.ge`
- Problem: One cannot easily write something like, for example:
    `version_current >= {0, 10, 0}`; writing like
    `not vim.version.lt(version_current, {0, 10, 0})` is verbose.

- Solution: add {`le`,`ge`} in addition to {`lt`,`gt`}.

- Also improve typing on the operator methods: allow `string` as well.

- Update the example in `vim.version.range()` docs: `ge` in place of
  `gt` better matches the semantics of `range:has`.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -289,6 +289,8 @@ The following new APIs and features were added.
 
 • Terminal buffers respond to OSC background and foreground requests. |default-autocmds|
 
+• |vim.version.le()| and |vim.version.ge()| are added to |vim.version|.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
