feat(api): add `nvim_tabpage_set_win`
Allows setting the current window of a non-current tabpage
without switching tabpages.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -304,6 +304,8 @@ The following new APIs and features were added.
   highlight attribute. The TUI will display URLs using the OSC 8 control
   sequence, enabling clickable text in supporting terminals.
 
+• Added |nvim_tabpage_set_win()| to set the current window of a tabpage.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
