feat(man): allow opening pages in current window (#27861)
With :hide modifier, open page in current window.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -254,6 +254,8 @@ The following new APIs and features were added.
     node emit a hyperlink. Hyperlinks are UI specific: in the TUI, the OSC 8
     control sequence is used.
 
+• |:Man| now supports `:hide` modifier to open page in the current window.
+
 • |vim.ui.open()| opens URIs using the system default handler (macOS `open`,
   Windows `explorer`, Linux `xdg-open`, etc.)
 
