refactor(options)!: revamp hidden options
Problem: Currently, there are three different ways of marking an option as hidden, `enable_if = false`, `hidden = true` and `immutalbe = true`. These also have different behaviors. Options hidden with `enable_if = false` can't have their value fetched using Vim script or the API, but options hidden with `hidden = true` or `immutable = true` can. On the other hand, options with `hidden = true` do not error when trying to set their value, but options with `immutable = true` do.

Solution: Remove `enable_if = false`, remove the `hidden` property for options, and use `immutable = true` to mark an option as hidden instead. Also make hidden option variable pointers always point to the default value, which allows fetching the value of every hidden option using Vim script and the API. This does also mean that trying to set a hidden option will now give an error instead of just being ignored.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -113,6 +113,8 @@ OPTIONS
   of just string |global-local| options.
 • `:setlocal {option}<` copies the global value to the local value for number
   and boolean |global-local| options instead of removing the local value.
+• Setting |hidden-options| now gives an error. In particular, setting
+  'noshellslash' is now only allowed on Windows.
 
 PLUGINS
 
