refactor(lua): deprecate tbl_flatten
forgot some changes in 9912a4c81b0856200f44a38e99d38eae44cef5c9

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -565,6 +565,7 @@ release.
 
 • Lua stdlib:
   - |vim.tbl_add_reverse_lookup()|
+  - |vim.tbl_flatten()|
   - |vim.tbl_islist()|
 
  vim:tw=78:ts=8:sw=2:et:ft=help:norl:
